--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,7 +1,6 @@
 @import '~@angular/material/theming';
 
 
-$gal-min-width: 320px;
 $gal-black: #282828;
 $gal-white: #f4f4f4;
 $gal-gray: gray;
